# dgxarley

./: .gitignore  .pre-commit-config.yaml  COMFYUI_ARM64_SM121.md  COMFYUI_PROMPT_FAIL.md  COMFYUI_SM121_PATCHES.md  CUTLASS_NVFP4_SM121_PRD.md  DEEPSEEK_V4_FLASH_NVFP4_SGLANG_GB10.md  DIFFUSIONGEMMA_SGLANG_SCOPE.md  DOCKERHUB_OVERVIEW_dgx-spark-pytorch-dev.md  DOCKERHUB_OVERVIEW_dgx-spark-quant.md  DOCKERHUB_OVERVIEW_dgx-spark-sglang.md  DSA_speedup.md  DSV4_MEM_WORKAROUND.md  FIXED_SGLANG_ABORT_STATUS_CODE_UPSTREAM_BUG.md  FIXED_SGLANG_MOE_TUNE_UPSTREAM_BUG.md  FIXED_SGLANG_QWEN35_PP_UPSTREAM_BUG.md  FIXED_SGLANG_QWEN36_27B_FP8_UPSTREAM_BUG.md  FIXED_SGLANG_REASONING_TOKENS_UPSTREAM_BUG.md  FLASHINFER_CUDA_VERSION_SUBPROCESS_UPSTREAM_BUG.md  FLASHINFER_HEAD_DIM_512_UPSTREAM_BUG.md  HERMES_EMAIL_UPSTREAM.md  JUICEFS_MIGRATION_HOWTO.md  KCEVE_KVM.md  LITELLM_UPSTREAM_BUG.md  LOCAL_AGENTS.md  MLEEDA_KVM.md  Makefile  NCCL_BANDWIDTH_PROFILING.md  PP_vs_TP_PARALLELISM.md  README.md  README_pypi.md  SGLANG_DEEPSEEK_V4_FLASH_KV_LORA_RANK_UPSTREAM_BUG.md  SGLANG_DEV2_VERSION_CHANGES.md  SGLANG_FP8_MOEMETHOD_FLASHINFER_CUTLASS_UPSTREAM_BUG.md  SGLANG_GEMMA4_UPSTREAM_BUG.md  SGLANG_MOE_TUNE_UPSTREAM_BUG.md  SGLANG_NVFP4_SHUFFLE_ROWS_OOB_UPSTREAM_BUG.md  SGLANG_QWEN35_PP_UPSTREAM_BUG.md  SGLANG_QWEN35_VISION_CONFIG_BUG.md  SGLANG_QWEN36_27B_FP8_UPSTREAM_BUG.md  (+40 more)
.github/workflows/: checkblack.yml  mypynpytests.yml
TESTLOGS/sglang_nn2_tp2_ep2/: TESTLOG_nv580.142_sglang-0.5.9-dev2_minimax-m2.5-nvfp4_2n.md
TESTLOGS/sglang_nn3_tp1_ep1/: TESTLOG_nv580.142_sglang-0.5.9-dev2_minimax-m2.5-nvfp4_3n.md
TESTLOGS/sglang_nn4_tp1_ep1/: TESTLOG_nv580.142_sglang-0.5.10rc0_minimax-m2.5-nvfp4_4n_pp4.md
TESTLOGS/sglang_nn4_tp1_ep1/glm-4.7-nvfp4/: TESTLOG_nv580.142_sglang-0.5.10rc0_glm-4.7-nvfp4_4n_pp4.md  TESTLOG_nv580.142_sglang-0.5.9-dev2_glm-4.7-nvfp4_4n_pp4.md
TESTLOGS/sglang_nn4_tp1_ep1/minimax-m2.5-nvfp4/: TESTLOG_nv580.142_sglang-0.5.10rc0_minimax-m2.5-nvfp4_4n_pp4.md
TESTLOGS/sglang_nn4_tp4_ep1/gemma-4-26b-a4b-it/: TESTLOG_nv580.142_sglang-0.5.11_gemma-4-26b-a4b-it_4n.md
TESTLOGS/sglang_nn4_tp4_ep1/gemma-4-31b-it/: TESTLOG_nv580.142_sglang-0.5.10_gemma-4-31b-it_4n.md  TESTLOG_nv580.142_sglang-0.5.11_gemma-4-31b-it_4n.md
TESTLOGS/sglang_nn4_tp4_ep1/glm-4.7-nvfp4/: TESTLOG_nv580.142_sglang-0.5.10_glm-4.7-nvfp4_4n.md
TESTLOGS/sglang_nn4_tp4_ep1/minimax-m2.7-nvfp4/: TESTLOG_nv580.159_sglang-0.5.12.post1_minimax-m2.7-nvfp4_4n.md
TESTLOGS/sglang_nn4_tp4_ep1/minimax-m3-v0-nvfp4/: TESTLOG_nv580.159_sglang-mm-v0_minimax-m3-v0-nvfp4_4n.md
TESTLOGS/sglang_nn4_tp4_ep4/: TESTLOG_nv580.142_sglang-0.5.10rc0_minimax-m2.5-nvfp4_4n.md
dgxarley/: __init__.py
dgxarley/integration/: __init__.py  comfyui_integration_test.py  ollama_integration_test.py  openwebui_integration_test.py  repetition_detector.py  sglang_bench.py  sglang_integration_test.py  sglang_raw.py  streaming_repetition_guard.py  thinking_parser.py
dgxarley/k3shelperstuff/: README.md  __init__.py  keel_drift.py  update_local_k3s_keys.py
dgxarley/tools/: kceve_kvm.py  kceve_kvm_web.py  kceve_kvm_web_plain.py
docs/: DGX Spark Setup - OpenWebUI Details EN.md  DGX Spark Setup - Scaling & Outlook EN.md  DGX Spark Setup - Skalierung & Ausblick.md  DGX Spark Setup - openwebui detailinfo.md  DGX Spark Setup EN.md  DGX Spark Setup.md  storytime-3.md
group_vars/all/: main.yml  vault.yml
group_vars/all/main/: common.yml  dns.yml  forgejo.yml  hermes.yml  (+12 more)
group_vars/dgxsparks/: main.yml  vault.yml
group_vars/fullvlans/: main.yml  vault.yml
group_vars/k3sserver/: main.yml  vault.yml
host_vars/k3smaster/: main.yml  vault.yml
host_vars/mikrotik-CRS310-8G-2S/: main.yml  vault.yml
host_vars/mikrotik-CRS812-8DS-2DQ-2DDQ-RM/: main.yml  vault.yml
host_vars/spark1/: main.yml  vault.yml
host_vars/spark2/: main.yml  vault.yml
host_vars/spark4/: main.yml  vault.yml
host_vars/spark5/: vault.yml
initial_design/: DGX Spark QSFP DeepDive.md  DGX Spark Setup - OpenWebUI Details EN.md  DGX Spark Setup - Scaling & Outlook EN.md  DGX Spark Setup - Skalierung & Ausblick.md  DGX Spark Setup - openwebui detailinfo.md  DGX Spark Setup EN.md  DGX Spark Setup.md
k3shelperstuff/: README.md  update_local_k3s_keys.py
ops/qwen235b-tuning/: CLAUDE.md  follow-log.sh  prd.json  progress.txt  ralph-qwen235b-tuning.sh  test_params.py
roles/juicefs_storage/: README.md
roles/k3sserver/: README.md
roles/nut/: README.md
scripts/: build_comfyui_image.sh  build_cudnn_image.sh  build_dgx_spark_quant_image.sh  build_pytorch_base_image.sh  build_sm121_image.sh  distrbaseimage.sh  distrcudnnimage.sh  distrsm121image.sh  luks_encrypt_spark.sh  reset_qsfp_sriov.sh
scripts/comfyui/: Dockerfile
scripts/patches/: build-image-sh-podman.patch  dgx-spark-quant-sm121.Dockerfile  dockerfile-accelerate.patch  dockerfile-cutlass-dsl-pin.patch  dockerfile-dsv4-flashmla.patch  dockerfile-dsv4-mtp-marlin-tilelang.patch  dockerfile-dsv4-nvfp4.patch  dockerfile-gemma4-mtp.patch  dockerfile-gemma4-nvfp4.patch  dockerfile-kernels-pin.patch  dockerfile-qwen36-mixed-nvfp4.patch  dockerfile-sm121.patch  pytorch-2.11.0-dev-v1.recipe  pytorch-2.12.0-dev-v1.recipe  sgl-kernel-arch-prune.patch  sgl-kernel-disable-fa3-mainahead.patch  sgl-kernel-disable-fa3.patch  sgl-kernel-skip-flashmla.patch  sgl-kernel-skip-sm90-target-mainahead.patch  sgl-kernel-sm121-debug.patch  sgl-kernel-sm121.patch  sglang-0.5.10-sm121.recipe  sglang-0.5.11-gemma4-sm121.recipe  sglang-0.5.11-sm121.recipe  sglang-0.5.12-gemma4-sm121.recipe  sglang-0.5.12-sm121.recipe  sglang-0.5.13-dev-nemotronh-mtp-sm121.recipe  sglang-0.5.13-gemma4-sm121.recipe  sglang-0.5.13-sm121.recipe  sglang-0.5.14-gemma4-diffusion-sm121.recipe  sglang-0.5.14-sm121.recipe  sglang-dsv4-mtp-marlin-v0.5.14.patch  sglang-dsv4-nvfp4-pr25820.patch  sglang-gemma4-geglu-nan-clamp.patch  sglang-gemma4-mtp-pr24436.patch  sglang-gemma4-nvfp4-expert-loading.patch  sglang-gemma4-sm121-dev1.recipe  sglang-main-gemma4.recipe  sglang-qwen36-mixed-nvfp4-pr27906-mainahead.patch  sglang-qwen36-mixed-nvfp4-pr27906.patch  (+2 more)
tests/: test_base.py
(+370 files in other folders)
