[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "dgxarley"
dynamic = ["version"]
requires-python = ">=3.14"
readme = "README_pypi.md"
authors = [
  { name="Henning Thieß", email="ht@xomox.cc" },
]
license-files = ["LICENSE.md"]
keywords = ["llm", "inference", "sglang", "ollama", "openwebui", "dgx", "k3s", "streaming", "repetition-detection"]
description = "Integration testing, streaming utilities, and repetition detection for distributed LLM inference on DGX Spark clusters"

# https://pypi.org/classifiers/
classifiers = [
    "Development Status :: 4 - Beta",

    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.14",

    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Topic :: System :: Distributed Computing",

    "License :: OSI Approved :: GNU Lesser General Public License v3 (LGPLv3)",
    "Operating System :: POSIX :: Linux",
]


dependencies = [
    "requests",
    "rich",
    "aiohttp",
    "PyYAML",
    "ascii-magic",
    "Pillow",
    "pydantic",
    "loguru",
    "tabulate",
    "pyserial",
]

[project.optional-dependencies]
dev = [
    "pre-commit",
    "pytest",
    "mypy",
    "black",
    "isort",
    "types-requests",
    "types-PyYAML",
    "sglang",
    "types-pyserial"
    # torch is installed via requirements-dev.txt with --extra-index-url
    # (PyTorch cu129 wheel index) — cannot be specified here in pyproject.toml
]
web = [
    "fastapi",
    "uvicorn[standard]",
]
ansible = [
    "jinja2",
    "kubernetes",
    "dnspython",
    "pygithub",
    "huggingface-hub",
    "paramiko",
    "ansible",
    "ansible-pylibssh",
]
build = [
    "hatch",
]

[project.urls]
Homepage = "https://github.com/vroomfondel/dgxarley"
Repository = "https://github.com/vroomfondel/dgxarley"
Issues = "https://github.com/vroomfondel/dgxarley/issues"



[tool.hatch.version]
path = "dgxarley/__init__.py"

[tool.isort]
profile = "black"
line_length = 120

[tool.black]
line-length = 120
target-version = ["py313"]
#extend-exclude = '''
#(?x)(
#    automowerclient
#    | husqvarnaauth
#)
#'''

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = "tests/*.py"

[tool.mypy]
strict = true
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
check_untyped_defs = true
disallow_untyped_decorators = true
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_no_return = true
warn_unreachable = true
plugins = ["pydantic.mypy"]
exclude = '''(?x)(
    \.venv
    | venv
    | \.pyi$
    )'''

[[tool.mypy.overrides]]
module = [
    "cv2", "numpy", "pytesseract", "kubernetes.*",
    "aiohttp", "ascii_magic", "uvicorn", "fastapi", "fastapi.*",
]
ignore_missing_imports = true


[project.scripts]
sglang-raw = "dgxarley.integration.sglang_raw:main"
sglang-test = "dgxarley.integration.sglang_integration_test:main"
openwebui-test = "dgxarley.integration.openwebui_integration_test:main"
ollama-test = "dgxarley.integration.ollama_integration_test:main"
kceve-kvm = "dgxarley.tools.kceve_kvm:main"
kceve-kvm-web = "dgxarley.tools.kceve_kvm_web:main"
kceve-kvm-web-plain = "dgxarley.tools.kceve_kvm_web_plain:main"
